[gd_scene load_steps=11 format=3 uid="uid://chvfo12duo08y"]

[ext_resource type="Texture2D" uid="uid://bsedifg70kyp" path="res://assets/room/windowclose.png" id="1_txauh"]
[ext_resource type="Script" path="res://Drawer.gd" id="2_2lua3"]
[ext_resource type="PackedScene" uid="uid://ctyptrklqsavv" path="res://CircularProgressBar.tscn" id="3_1p4ne"]
[ext_resource type="AudioStream" uid="uid://scdxx3uv40qg" path="res://assets/sounds/drawer-open.wav" id="4_3d6u3"]
[ext_resource type="AudioStream" uid="uid://cbmbiq30dqgcr" path="res://assets/sounds/drawer-close.wav" id="5_011xu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2whc8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jwb68"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyosb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3yd1w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ah4jk"]

[node name="Drawer" type="Button"]
offset_right = 100.0
offset_bottom = 150.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_2whc8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jwb68")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wyosb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3yd1w")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ah4jk")
icon = ExtResource("1_txauh")
expand_icon = true
script = ExtResource("2_2lua3")

[node name="OpenCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="CircularProgressBar" parent="." node_paths=PackedStringArray("timer") instance=ExtResource("3_1p4ne")]
layout_mode = 0
mouse_filter = 2
timer = NodePath("../OpenCloseTimer")

[node name="OpenAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3d6u3")

[node name="CloseAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_011xu")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="OpenCloseTimer" to="." method="_on_open_close_timer_timeout"]
